fix: page no longer shifts when scroll bar appears

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #ffffff;
   background-image: url("./assets/bright-squares.png");
+  overflow-x: hidden;
 }
 
 code {
@@ -15,11 +16,11 @@ code {
 }
 
 .pageFrame {
-  width: 1200px;
+  width: 100vw;
 }
 
-.text-card {
-  text-align: center;
+.contentFrame {
+  width: 1200px;
 }
 
 .card {
